tests/baselines/reference/parserForOfStatement10.errors.txt
tests/cases/conformance/parser/ecmascript6/Iterators/parserForOfStatement10.ts(1,1): error TS9003: 'for...of' statements are not currently supported.


==== tests/cases/conformance/parser/ecmascript6/Iterators/parserForOfStatement10.ts (1 errors) ====
    for (const v of X) {
    ~~~
!!! error TS9003: 'for...of' statements are not currently supported.
    }